--- a/dev/genre-classification/requirements.txt
+++ b/dev/genre-classification/requirements.txt
@@ -1,8 +1,8 @@
-matplotlib
-numpy
-pandas
-requests
-seaborn
-scipy
-joblib
-threadpoolctl
+matplotlib=3.3.4
+numpy=1.21.0
+pandas=1.2.1
+seaborn=0.11.1
+scipy=1.6.2
+joblib=1.2.0
+threadpoolctl=2.1.0
+tqdm=4.59.0
